# bravehub

./: .clang-format  .editorconfig  .eslintrc  .gitignore  .gitmodules  .pylintrc  README.md  bravehub.code-workspace  docker-compose.yml  package.json
bravehub_shared/: .gitignore  __init__.py  requirements.txt
bravehub_shared/exceptions/: bravehub_exceptions.py  error_codes.py
bravehub_shared/ioc/: __init__.py
bravehub_shared/services/: api_client.py  base_service.py  file_system.py  id_generator.py
bravehub_shared/utils/: dynamic_object.py  (+3 more)
cicd/: configure-localenv.sh  format-code.sh  generate-api-specs.sh  lint-code.sh  run-unit-tests.sh
configuration-api/: .gitignore  Dockerfile  README.md  requirements.txt
configuration-app/: .eslintrc.json  Dockerfile  Dockerfile-prod  README.md  bower.json  index.html  manifest.json  nginx.conf  package-lock.json  package.json  polymer.json  sw-precache-config.js
deployment/: README.md
identity-api/: .gitignore  Dockerfile
identity-app/: .eslintrc.json  .gitignore  Dockerfile  package.json  polymer.json
load-balancer/: Dockerfile  README.md
load-balancer/src/: CMakeLists.txt  config  ngx_http_bravehub_router_module.c
load-balancer/src/cpp/bravehub/: module-data.h  module.cpp  module.h
load-balancer/src/cpp/bravehub/config/: router-config.cpp  router-config.h
load-balancer/src/cpp/bravehub/utils/: ngx-utils.cpp  ngx-utils.h
logging-api/: .gitignore  Dockerfile  README.md  requirements.txt
provisioning-api/: .gitignore  Dockerfile  README.md  requirements.txt
scenegraph-api/: .gitignore  Dockerfile
(+174 files in other folders)
